--- a/Module3HW2/Module3HW2/Module3HW2.csproj
+++ b/Module3HW2/Module3HW2/Module3HW2.csproj
@@ -4,11 +4,10 @@
     <OutputType>Exe</OutputType>
 	<CodeAnalysisRuleSet>../../settings.ruleset</CodeAnalysisRuleSet>
     <TargetFramework>net5.0</TargetFramework>
-    <AssemblyName>Module3HW2</AssemblyName>
-    <RootNamespace>Module3HW2</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
